--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,8 @@
-certifi==2021.10.8
-click==7.1.2
-configparser==4.0.2
-contextlib2==0.6.0.post1
-distlib==0.3.5
-filelock==3.2.1
-importlib-metadata==2.1.3
-importlib-resources==3.3.1
-joblib==0.14.1
-pathlib2==2.3.7.post1
-platformdirs==2.0.2
-scandir==1.10.0
-singledispatch==3.7.0
-six==1.16.0
-typing==3.10.0.0
-virtualenv==20.15.1
-zipp==1.2.0
+attrs==22.1.0
+iniconfig==1.1.1
+packaging==21.3
+pluggy==1.0.0
+py==1.11.0
+pyparsing==3.0.9
+pytest==7.1.2
+tomli==2.0.1
